# alaman-jo-project

./: .env.example  .gitignore  README.md  main.py  package-lock.json  package.json  pyproject.toml  requirements.txt  tailwind.config.js
accounts/: admin.py  backends.py  forms.py  models.py  urls.py  views.py
accounts/migrations/: 0001_initial.py  0002_alter_customuser_options_and_more.py
config/: settings.py  urls.py
core/: urls.py  views.py
projects/: admin.py  apps.py  firebase_manager.py  forms.py  middleware.py  models.py  urls.py  utils.py  views.py
projects/migrations/: 0001_initial.py  0002_domainchange_firebase_error_and_more.py  0003_remove_usersession_city_remove_usersession_country_and_more.py
projects/templatetags/: project_extras.py
shop/: admin.py  apps.py  context_processors.py  forms.py  middleware.py  models.py  models.py.backup  urls.py  utils.py  views.py
shop/migrations/: 0001_initial.py
templates/accounts/: profile.html  profile_edit.html
templates/base/: _footer.html  _navbar.html  _navbar.html.back  base.html
templates/core/: about.html  home.html
templates/projects/: change_domain.html  dashboard.html  project_detail.html  project_list.html
templates/registration/: login.html  password_change_done.html  password_change_form.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  password_reset_form.html  register.html
templates/shop/: cart.html  category_detail.html  checkout.html  contact.html  contact_success.html  home.html  maintenance_quote.html  maintenance_quote_success.html  (+8 more)
(+3 files in other folders)
